<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity1">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="3"
        android:title="@string/action_feedback" />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="4"
        android:title="@string/action_list" />
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="5"
        android:title="@string/action_grid" />

    <item
        android:id="@+id/action_all_app"
        android:orderInCategory="6"
        android:title="@string/action_allapp" />
    <item
        android:id="@+id/action_third_app"
        android:orderInCategory="7"
        android:title="@string/action_thirdapp" />


</menu>